// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Detached ExpandableSection renders successfully 1`] = `
Array [
  <ExpandableSection
    className=""
    contentId="test"
    displaySize="default"
    isActive={false}
    isDetached={true}
    isExpanded={true}
    isIndented={false}
    isWidthLimited={false}
    onToggle={[Function]}
    toggleText=""
    toggleTextCollapsed=""
    toggleTextExpanded=""
  >
    <div
      className="pf-c-expandable-section pf-m-expanded pf-m-detached"
    >
      <div
        className="pf-c-expandable-section__content"
        hidden={false}
        id="test"
      >
        test
      </div>
    </div>
  </ExpandableSection>,
  <ExpandableSectionToggle
    contentId="test"
    direction="up"
    isExpanded={true}
  >
    <div
      className="pf-c-expandable-section pf-m-expanded pf-m-detached"
    >
      <button
        aria-controls="test"
        aria-expanded={true}
        className="pf-c-expandable-section__toggle"
        onClick={[Function]}
        type="button"
      >
        <span
          className="pf-c-expandable-section__toggle-icon pf-m-expand-top"
        >
          <AngleRightIcon
            aria-hidden={true}
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </AngleRightIcon>
        </span>
        <span
          className="pf-c-expandable-section__toggle-text"
        >
          Toggle text
        </span>
      </button>
    </div>
  </ExpandableSectionToggle>,
]
`;

exports[`Disclosure ExpandableSection 1`] = `
<div
  className="pf-c-expandable-section pf-m-display-lg pf-m-limit-width"
>
  <button
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <span
      className="pf-c-expandable-section__toggle-icon"
    >
      <AngleRightIcon
        aria-hidden={true}
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
    <span
      className="pf-c-expandable-section__toggle-text"
    />
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={true}
    id=""
  >
    test 
  </div>
</div>
`;

exports[`ExpandableSection 1`] = `
<div
  className="pf-c-expandable-section"
>
  <button
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <span
      className="pf-c-expandable-section__toggle-icon"
    >
      <AngleRightIcon
        aria-hidden={true}
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
    <span
      className="pf-c-expandable-section__toggle-text"
    />
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={true}
    id=""
  >
    test 
  </div>
</div>
`;

exports[`Renders ExpandableSection expanded 1`] = `
<div
  className="pf-c-expandable-section pf-m-expanded"
>
  <button
    aria-expanded={true}
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <span
      className="pf-c-expandable-section__toggle-icon"
    >
      <AngleRightIcon
        aria-hidden={true}
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
    <span
      className="pf-c-expandable-section__toggle-text"
    />
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={false}
    id=""
  >
     test 
  </div>
</div>
`;

exports[`Renders ExpandableSection indented 1`] = `
<div
  className="pf-c-expandable-section pf-m-expanded pf-m-indented"
>
  <button
    aria-expanded={true}
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <span
      className="pf-c-expandable-section__toggle-icon"
    >
      <AngleRightIcon
        aria-hidden={true}
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
    <span
      className="pf-c-expandable-section__toggle-text"
    />
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={false}
    id=""
  >
     test 
  </div>
</div>
`;

exports[`Renders Uncontrolled ExpandableSection 1`] = `
<div
  className="pf-c-expandable-section"
>
  <button
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <span
      className="pf-c-expandable-section__toggle-icon"
    >
      <AngleRightIcon
        aria-hidden={true}
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
    <span
      className="pf-c-expandable-section__toggle-text"
    >
      Show More
    </span>
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={true}
    id=""
  >
     test 
  </div>
</div>
`;
